Fix compile error: Workaround nonavailable method